tests/ui/methods/call_method_unknown_pointee.stderr
error[E0282]: type annotations needed
  --> $DIR/call_method_unknown_pointee.rs:9:23
   |
LL |         let _a: i32 = (ptr as *const _).read();
   |                       ^^^^^^^^^^^^^^^^^ ---- cannot call a method on a raw pointer with an unknown pointee type
   |                       |
   |                       cannot infer type

error[E0282]: type annotations needed for `*const _`
  --> $DIR/call_method_unknown_pointee.rs:17:13
   |
LL |         let b = ptr as *const _;
   |             ^
LL |
LL |         let _b: u8 = b.read();
   |                        ---- cannot call a method on a raw pointer with an unknown pointee type
   |
help: consider giving `b` an explicit type, where the placeholders `_` are specified
   |
LL |         let b: *const _ = ptr as *const _;
   |              ++++++++++

error[E0282]: type annotations needed
  --> $DIR/call_method_unknown_pointee.rs:27:23
   |
LL |         let _c: i32 = (ptr as *mut _).read();
   |                       ^^^^^^^^^^^^^^^ ---- cannot call a method on a raw pointer with an unknown pointee type
   |                       |
   |                       cannot infer type

error[E0282]: type annotations needed for `*mut _`
  --> $DIR/call_method_unknown_pointee.rs:35:13
   |
LL |         let d = ptr as *mut _;
   |             ^
LL |
LL |         let _d: u8 = d.read();
   |                        ---- cannot call a method on a raw pointer with an unknown pointee type
   |
help: consider giving `d` an explicit type, where the placeholders `_` are specified
   |
LL |         let d: *mut _ = ptr as *mut _;
   |              ++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0282`.
